<resources>
    <string name="app_name">Ani Watch</string>
    <string name="search_anime">Search Anime</string>
    <string name="no_result_found">No Result Found</string>
    <string name="todo">TODO</string>
    <string name="pg">PG</string>
    <string name="domain_vc">vc</string>
    <string name="domain_app">app</string>
    <string name="domain_sx">sx</string>
    <string name="domain_pro">pro</string>
    <string name="domain_pe">pe</string>
    <string name="loading_video">Loading video…</string>
    <string name="retry">Retry</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="download">Download</string>
    <string name="permission_not_enabled">Please enable the Write External Storage Permission</string>
    <string name="delete_files">Delete Downloads test files from the file system and try again.</string>
    <string name="delete_title">Are you sure you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="view">VIEW</string>
    <string name="wifiOnly">WiFi Only</string>
    <string name="start">Start</string>
    <string name="complete_over">%1$d/%2$d</string>
    <string name="reset">RESET</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="downloading">downloading…</string>
    <string name="queued">QUEUED</string>
    <string name="added">ADDED</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="delete_all_files">Delete Downloaded Files</string>
    <string name="downloaded_files_deleted">Downloads Files Deleted</string>
    <string name="game_download_error">An error occurred, could not get game files.</string>
    <string name="enqueue_error">Could not enqueue this request. Check logcat.</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>
    <string name="show_downloads">Show Downloads</string>
    <string name="play">Play</string>
    <string name="note_if_download_is_stuck_with_no_progress_try_pause_and_then_resume">Note: If Download is stuck with no progress try \'Pause\' and then \'Resume\'</string>
    <string name="_00_00">00:00</string>
    <string name="forward_slash">/</string>
    <string name="anime_search">Anime Search</string>
    <string name="enter_username">Enter Username</string>
    <string name="create_user">Create User</string>
    <string name="update_notice">This version is still in works. It was released to address on going issue with getting Video link.\n\n<b>NOTE</b>\n\nSome links are still not working its an issue with download link got from gogoanime.\n\nThere are still some bugs and partially working features.\n\nI am working on.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lonely">So lonely</string>
    <string name="getting_video_link">Searching Video</string>
    <string name="next_ep">Next Ep</string>
</resources>