<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RecentReleasedActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/change_domain_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/naruto_doodle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="0dp"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:visibility="gone"
            android:id="@+id/domain_btn_group"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintStart_toEndOf="@+id/change_domain_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <Button
                android:id="@+id/vc_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domain_vc"
                style="@style/ToggleButtonWithIconOnly"/>

            <Button
                android:id="@+id/app_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domain_app"
                style="@style/ToggleButtonWithIconOnly"/>

            <Button
                android:id="@+id/sx_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domain_sx"
                style="@style/ToggleButtonWithIconOnly"/>

            <Button
                android:id="@+id/pro_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domain_pro"
                style="@style/ToggleButtonWithIconOnly"/>

            <Button
                android:id="@+id/pe_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domain_pe"
                style="@style/ToggleButtonWithIconOnly"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="Recent Releases"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintStart_toEndOf="@+id/change_domain_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="end"
            app:icon="@drawable/ic_round_search_24"
            app:iconGravity="textStart"
            app:iconTint="#FBAF16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent_releases_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ProgressBar
        android:id="@+id/recent_list_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>