<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText"
    tools:context=".ui.AnimeDetailsActivity">

    <LinearLayout
        android:id="@+id/mainLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.AnimeDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/cover_img"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <include
                layout="@layout/video_view"
                android:layout_height="230dp"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/yt_pla_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:icon="@drawable/ic_outline_play_circle_24"
                app:iconTint="#FFFFFF"
                app:backgroundTint="@null"
                android:background="@drawable/gradinat_bg"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/title_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tonikaku kawayi"
                android:textSize="25sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:scrollbarSize="0.5dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/release_year_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="2018" />


                    <TextView
                        android:id="@+id/age_rating"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:textSize="15sp"
                        android:hint="@string/pg"
                        android:layout_margin="5dp"
                        android:padding="1dp"
                        android:gravity="center_horizontal"
                        android:background="@drawable/circular_bg"/>

                    <TextView
                        android:id="@+id/duration_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="2 hr" />

                    <TextView
                        android:id="@+id/total_eps_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="0 Episodes" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Status:" />

                    <TextView
                        android:id="@+id/status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="Completed" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Rating" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="5.6" />

                </LinearLayout>

            </HorizontalScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Select Episode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sort_ep_list_btn"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:startIconDrawable="@drawable/ic_round_movie_24">

                    <AutoCompleteTextView
                        android:id="@+id/episode_selection_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:inputType="textAutoComplete"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="Episode 1"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sort_ep_list_btn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:theme="@android:style/Widget.Material.Light.Button.Borderless"
                    app:icon="@drawable/ic_outline_change_circle_24"
                    app:iconTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
                    app:layout_constraintVertical_bias="1.0" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progress="50"
                        android:layout_marginStart="0.5dp"
                        android:layout_marginEnd="0.5dp"
                        android:layout_marginBottom="3dp"
                        android:progressTint="#FF0000"
                        android:maxHeight="5dp"
                        android:layout_alignBottom="@+id/play_btn"
                        android:layout_alignEnd="@+id/play_btn" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/play_btn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:clickable="false"
                        android:shadowColor="@color/cardview_shadow_start_color"
                        android:text="@string/play"
                        app:icon="@drawable/ic_round_play_arrow_24"
                        app:iconGravity="textStart" />
                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>




            <com.google.android.material.button.MaterialButton
                android:id="@+id/download_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/download"
                android:backgroundTint="@color/cardview_dark_background"
                android:shadowColor="@color/cardview_shadow_start_color"
                android:clickable="false"
                app:icon="@drawable/ic_round_download_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_downloads_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="visible"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/show_downloads"
                app:icon="@drawable/ic_round_download_24"
                app:iconGravity="textStart"
                android:clickable="false"
                app:iconPadding="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ToggleButton
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/add_to_list_btn"
                    style="@style/MyListToggleButton"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/my_list_toggle_bg"
                    android:checked="false"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="My List"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/add_to_list_btn"
                    app:layout_constraintStart_toStartOf="@+id/add_to_list_btn"
                    app:layout_constraintTop_toBottomOf="@+id/add_to_list_btn" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ScrollView
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="1dp">

                <TextView
                    android:id="@+id/synopsis_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="synopsis of the show"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


<!--                    <TextView-->
<!--                        android:id="@+id/textView2"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Genre: "-->
<!--                        app:layout_constraintStart_toStartOf="@+id/synopsis_text"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/synopsis_text" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView5"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginStart="12dp"-->
<!--                        android:hint="Genre"-->
<!--                        app:layout_constraintStart_toEndOf="@+id/textView2"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/synopsis_text" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView3"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Rating: "-->
<!--                        app:layout_constraintStart_toStartOf="@+id/synopsis_text"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView4"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:hint="Rating"-->
<!--                        app:layout_constraintEnd_toEndOf="@+id/textView5"-->
<!--                        app:layout_constraintStart_toStartOf="@+id/textView5"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/textView5" />-->


            </ScrollView>


        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
